database.yml changes

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ development:
   password: peeyush
 
 
-development:
+production:
   adapter: postgresql
   encoding: unicode
   database: ankur_blog_production
